# Upwork-Job-Scraper

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
resources/db/migrations/: 001_create_jobs_table.sql
src/auth/: token_manager.py
src/controllers/: scraper_controller.py
src/errors/: base_errors.py
src/log/: log_config.py
src/models/: job_models.py  proxy_models.py
src/postgres/: core.py  jobs.py
src/proxies/: proxy_manager.py
src/scrapers/: job_fetcher.py
src/settings/: config.py
tests/: test_job_models.py  test_proxy_manager.py  test_token_manager.py
